@@ -4,13 +4,13 @@ dnl APACHE_MODULE(name, helptext[, objects[, structname[, default[, config]]]])
 
 APACHE_MODPATH_INIT(filters)
 
-APACHE_MODULE(buffer, Filter Buffering, , , yes)
+APACHE_MODULE(buffer, Filter Buffering, , , most)
 APACHE_MODULE(data, RFC2397 data encoder, , , )
-APACHE_MODULE(ratelimit, Output Bandwidth Limiting, , , yes)
+APACHE_MODULE(ratelimit, Output Bandwidth Limiting, , , most)
 APACHE_MODULE(reqtimeout, Limit time waiting for request from client, , , yes)
 APACHE_MODULE(ext_filter, external filter module, , , most)
-APACHE_MODULE(request, Request Body Filtering, , , yes)
-APACHE_MODULE(include, Server Side Includes, , , yes)
+APACHE_MODULE(request, Request Body Filtering, , , most)
+APACHE_MODULE(include, Server Side Includes, , , most)
 APACHE_MODULE(filter, Smart Filtering, , , yes)
 APACHE_MODULE(reflector, Reflect request through the output filter stack, , , )
 APACHE_MODULE(substitute, response content rewrite-like filtering, , , most)
