@@ -5,12 +5,12 @@ dnl APACHE_MODULE(name, helptext[, objects[, structname[, default[, config]]]])
 APACHE_MODPATH_INIT(mappers)
 
 APACHE_MODULE(vhost_alias, mass virtual hosting module, , , most)
-APACHE_MODULE(negotiation, content negotiation, , , yes)
+APACHE_MODULE(negotiation, content negotiation, , , most)
 APACHE_MODULE(dir, directory request handling, , , yes)
 APACHE_MODULE(imagemap, server-side imagemaps, , , no)
-APACHE_MODULE(actions, Action triggering on requests, , , yes)
+APACHE_MODULE(actions, Action triggering on requests, , , most)
 APACHE_MODULE(speling, correct common URL misspellings, , , most)
-APACHE_MODULE(userdir, mapping of requests to user-specific directories, , , yes)
+APACHE_MODULE(userdir, mapping of requests to user-specific directories, , , most)
 APACHE_MODULE(alias, mapping of requests to different filesystem parts, , , yes)
 APACHE_MODULE(rewrite, rule based URL manipulation, , , most)
 
