@@ -8,7 +8,7 @@ APACHE_MODULE(env, clearing/setting of ENV vars, , , yes)
 APACHE_MODULE(mime_magic, automagically determining MIME type)
 APACHE_MODULE(cern_meta, CERN-type meta files, , , no)
 APACHE_MODULE(expires, Expires header control, , , most)
-APACHE_MODULE(headers, HTTP header control, , , most)
+APACHE_MODULE(headers, HTTP header control, , , yes)
 APACHE_MODULE(ident, RFC 1413 identity check, , , no)
 
 APACHE_MODULE(usertrack, user-session tracking, , , , [
